# gobotics

./: .gitignore  .tscn  LICENSE.md  README.md  assets_db.tres  export_presets.cfg  gobotics.kanban  gobotics_logo.png.import  gobotics_logo.svg.import  kanban_tasks_data.kanban  ld2studio.kanban  project.godot  table2.tscn  test_slider.scene
ControlPython/: alpha_kinematic_model.ipynb  alpha_test.ipynb  example.py  forward_kinematics.py  robot1.ipynb  robot2.ipynb  trajectory_estimation.ipynb  trajectory_estimation.py
Cup2023/: ball.tscn  cup_item.gd  sponge_cake.tscn  sponge_cake_layer.tscn
assets/: assets_db.tres  mecanum.urdf  ray_sensor.urdf  robot_alpha.tscn  roue_dentee.glb
build_exports/: build.py
builder/: build.py
docs/: Gobotics.md
examples/: essai.xml  example.gd  example.tscn  parser_mujoco.gd  parser_mujoco.tscn
game/: BlocksList.gd  EnvironmentList.gd  LevelContainer.gd  PythonBridge.gd  game.gd  game.tscn  game_list.gd  game_scene.gd  home_page.tscn  parts_list.gd  scene_view.gd  syntax_highlighters.tscn
pygobotics/: README.md  move_to.py  move_to_omni_drive.py  move_to_with_sensor.py  play_with_camera.py  play_with_diff_robot.py  play_with_gobotics.py  play_with_godot_bridge.py  play_with_mecanum_robot.py  play_with_omni_robot.py  play_with_opencv.py  play_with_ray_cast.py  play_with_robot.py  play_with_rotations.py  play_with_servo.py  play_with_servo_sm.py  play_with_several_robots.py  play_with_slider.py  play_with_slider_custom.py  play_with_state_machine.py  play_with_wrench.py  pyproject.toml  rotate_to_omni_drive.py  simple_path.py  trajectory_omni_drive.py
pygobotics/gobotics/: __init__.py  godotbridge.py  helper.py
pygobotics/pygobotics.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python/: alpha2_test.py  alpha_kinematic_model.ipynb  alpha_test.py  alpha_test_pd_control.py  ball_test.py  delta_test.py  demo.py  demo1.py  differential_robot.py  example.py  example2.py  example_statemachine.py  match.py  (+7 more)
(+456 files in other folders)
