[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pygobotics"
version = "0.12.1"
authors = [
    {name = "Laurent Dethoor", email = "ld2studiogame@gmail.com"}
]
description = "Python API allowing remote control of simulated robots in the Gobotics application"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "opencv-python",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/LD2Studio/gobotics"
"Bug Tracker" = "https://github.com/LD2Studio/gobotics/issues"

[tool.setuptools]
packages = ["gobotics"]

# $ cd pygobotics
# Build with : $ python -m build -> dist folder contains python package
# Dev mode : $ pip install --editable . (update pip if failed)
# Push PyPi : $ twine upload dist/*

# To publish on PyPi : username = __token__
# password = pypi-*****